tdf#93296 dashes in decimal part => 0 min decimal places

During import, as well during export, "0.--" must be considered
as 0 min decimal places

Change-Id: I33d06dd95c0678660bc0bb222972f82ef54f2c6e